--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Dinuka1220 · he/him.github.io/Hotel-Food",
+  "homepage": "https://Dinuka1220.github.io/Hotel-Food",
   "name": "saloon_site",
   "private": true,
   "version": "0.0.0",
